    - pmdaproc: migrate proc.psinfo.{vsize,rss,rss_lim} to U64
    - pmdacifs: drop duplicate makefile installs
    - pmdasummary: default to localhost for pmie pmcd connections
    - containers: allow clearing a previously set container context
    - python api: handle duplicate metric name in PMDA module correctly
    - python api: clear the _metric_names_map at appropriate times
    - pcp-pidstat: configurable timestamp formatting (-f option)
    - pcp-pidstat: fix traceback at end of archive with -G option
    - pcp-numastat: use pmFetchArchive when replaying an archive
    - pcp-numastat: fix poor handling of non-tty output
    - pcp-atop: fix sigsegv while handling NFS mounts metrics
    - pcp-atop: fix rawwriting and bad -T option passed to pmlogger
    - pmlogger: allow hostname to be over-ridden on the command line
    - pmlogconf: group pmprobe calls together, performance optimisations
    - pmlogconf: add proc.psinfo.guest_time to atop-proc for pcp-pidstat
    - pmlogconf: add numastat, pidstat and tapestat to zeroconf config
    - pmlogconf: add config for pcp-tapestat
    - pmlogconf: improve probe used for some optional log configs
    - pmieconf: add pmie rule detecting entropy starvation
    - pmrep: improve corner case metric name duplicate detection
    - pmwebd: add mandatory authentication mode (-C option)
    - libpcp: changes to remove client-pmcd socket multiplexing
    - libpcp: rework earlier changes to context handle semantics
    - libpcp: fix double-close on __pmConnectTo failure
    - libpcp: further locking improvements
    - libpcp: add buffer length check to pmEventFlagStr_r(3)
    - pmprobe: add -F option for further pmlogconf speedups
    - pmprobe: fix sigsegv in the presense of bad metric descriptors
    - pmlogger rc scripts: small changes cleaning up reports of warnings
    - pmie rc scripts: small changes cleaning up reports of warnings
    - selinux: policy updates to resolve a pmdabash issue